<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android test</string>
    <string name="hintFirstName">Enter your first name</string>
    <string name="hintLastName">Enter your last name</string>
    <string name="button_send">Send</string>
    <string name="image_description">This is a simple android application</string>
    <string name="hintDescription">Add a better description</string>
    <string name="button_apply">Apply</string>
    <string name="pictureDescription">Android robot</string>
    <string name="textLinear">Linear</string>
    <string name="textFrame">Frame</string>
    <string name="textConstraint">Constraint</string>
    <string name="button_recycle_view">Open Recycle View</string>
    <string name="button_view_pager">View Pager</string>
    <string name="text">Text</string>
    <string name="pg1">Page 1</string>
    <string name="pg2">Page 2</string>
    <string name="pg3">Page 3</string>
    <string name="pg4">Page 4</string>
    <string name="onboarding_1_title">Welcome to Guitar Pro!</string>
    <string name="onboarding_2_title">The body</string>
    <string name="onboarding_3_title">The neck</string>
    <string name="onboarding_4_title">The head</string>
    <string name="onboarding_1_description">Let\'s introduce you the key elements of a guitar. The Meal be with you!</string>
    <string name="onboarding_2_description">It\'s curvacious. It screams sexy. It\'s..a guitar.</string>
    <string name="onboarding_3_description">The neck basically is the section of the guitar that holds your fretboard, strings and headstock.</string>
    <string name="onboarding_4_description">The guitar head is like a real head. Without it, your guitar is basiacally useless and unplayable.</string>
    <string name="view_pager_button">LET\'S TRY OUT</string>
</resources>